site/styles/_wishlist.scss
.s72-userwishlist-items {
  @extend .d-flex;
  flex-wrap: wrap;

  .partial {
    @extend .slider-item;
    padding-bottom: $grid-gutter-width;
  }
}

.s72-userwishlist-empty {
  // text-align: center;
  // margin-top: -50px;
  flex: 1;

  a {
    @include a;
  }
}

// dont show empty wishlist message on homepage slider
.page-homepage .s72-userwishlist-empty {
  display: none;
}

.s72-userwishlist-buttons {
  .s72-btn-wishlist {
    @extend .btn;
    padding-left: 0;

    .s72-icon {
      font-size: 28px !important;
      opacity: 0.8;
    }
  }
}

.s72-userwishlist-buttons .s72-btn-wishlist,
.meta-award-nomination {
  font-size: 12px;
  font-weight: $font-weight-bold;

  span {
    @extend .d-flex;
    align-items: center;
    flex-direction: row;
    justify-content: center;
  }
}

.s72-userwishlist-buttons .s72-btn-wishlist {
  margin-right: 0.5rem;
  padding-bottom: 3px;
  padding-top: 3px;
}

.poster .s72-userwishlist-buttons .s72-btn-wishlist {
  margin: 0;
  padding: 0;
}

